# fluevent

./: README.md  pubspec.yaml  setup_opencv.sh
.github/workflows/: build_android.yml  dart.yml
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/kotlin/com/example/camera_starter/: MainActivity.kt
android/app/src/main/kotlin/com/example/flutter_opencv_lab/: CameraHelper.kt  MainActivity.kt  NativeDetector.kt
android/app/src/main/kotlin/com/example/lane_detection_app/: MainActivity.kt
android/app/src/main/kotlin/com/example/lane_detector/: MainActivity.kt
android/app/src/main/kotlin/com/example/tennis_detector/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: styles.xml
lib/: main.dart
